--- a/web/src/main/webapp/css/apartments.css
+++ b/web/src/main/webapp/css/apartments.css
@@ -14,41 +14,52 @@
     display: none;
 }
 
-.allRow {
+.apartmentsRow {
     display: flex;
     padding: 2%;
 }
 
-.id {
+.apartmentsRow__item {
     text-align: center;
+}
+
+.apartmentsRow__item_size_s {
     width: 10%;
 }
 
-.date {
+.apartmentsRow__item_size_m {
     width: 45%;
-    text-align: center;
 }
 
-.warning {
+.fun{
+
+}
+
+.fun__title {
     color: #999691;
+}
+
+.fun__image {
+    padding-top: 10%;
+    text-align: center
+}
+
+.fun_direction_rightBottom{
     position: absolute;
-    right: 16px;
+    right: 2%;
     top: 97%;
 }
 
-.cat {
-    position: absolute;
-    right: 2%;
-    top: 112%;
+.restInfoRow{
+    text-align: left;
+    display: flex;
 }
 
-.url {
-    text-align: left;
+.restInfoRow__url{
     cursor: text;
     width: 40%;
 }
 
-.definition {
-    text-align: left;
+.restInfoRow__definition{
     width: 60%;
 }
